# sentient-redactor-service

./: .gitignore  Cargo.toml  Dockerfile  README.md  expected_pcrs.json.example  pcr_verifier.py  presidio_service.py  redactor.dockerfile  requirements.txt  start.sh  test_client.py
demo_files/: demo_bank_statement.txt  demo_bank_statement_replace_redacted_e38914c6-b978-48bc-a436-6d67822ec0f1.txt  demo_credit_report.txt  demo_credit_report_replace_redacted_8120aa92-09e2-4036-ac70-4ac2e6a27aa0.txt  demo_employment_contract.txt  demo_employment_contract_replace_redacted_e0916c31-dfda-433e-b20d-c5ad7410c68d.txt  demo_insurance_policy.txt  demo_insurance_policy_replace_redacted_063ab13b-9ba4-4c05-97e1-a6299d747cae.txt  demo_invoice.txt  demo_invoice_replace_redacted_97e1f45b-9b00-43bf-a881-29512e44eb9c.txt  demo_medical_report.txt  demo_medical_report_replace_redacted_d76192c8-4822-4c29-bba0-e11c39581ec9.txt  demo_replace_redacted_eda24ae1-257e-4dbc-994b-890db078d03c.txt
src/: crypto.rs  main.rs  redactor.rs  storage.rs
