[package]
name = "sentient-redactor-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chacha20poly1305 = "0.10"
rsa = { version = "0.9", features = ["std"] }
sha2 = "0.10"
base64 = "0.21"
tempfile = "3.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
